add login page and functionality - state, service, actions, interfaces

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,8 @@
     "login": {
         "email": "E-mail",
         "password": "Password",
-        "button": "Login"
+        "button": "Login",
+        "emailRequired": "Field is required.",
+        "passwordRequired": "Field is required."
     }
 }
